--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
 
   
 
-const profile = localStorage.getItem("profile")
-const btn = document.getElementById("sign_up")
+// const profile = localStorage.getItem("profile")
+// const btn = document.getElementById("sign_up")
 // if (profile !== false) {
 //   btn.innerText = "Profile"
 //   window.location.href="about/profile.html"
