--- a/pages/about/schemes.html
+++ b/pages/about/schemes.html
@@ -26,12 +26,12 @@
       <ul class="navlinks">
            
             <li><a href="../about/schemes.html"><i class="fa-solid fa-gift"></i>Schemes</a></li>
-            <li><a href="../volunteerpages/signup.html"><i class="fa-solid fa-circle-dollar-to-slot"></i>Donatenow</a></li>
+            <li><a id="donationlink"><i class="fa-solid fa-circle-dollar-to-slot"></i>Donatenow</a></li>
             <li><a href="../about/aboutus.html"><i class="fa-solid fa-users"></i><p>About</p></a></li>
-            <li><a href="../volunteerpages/signup.html"><i class="fa-solid fa-truck-medical"></i>Gethelp</a></li>
+            <li><a id="gethelp"><i class="fa-solid fa-truck-medical"></i>Gethelp</a></li>
             <li><a href="../donarpages/involve.html"><i class="fa-brands fa-superpowers"></i>GetInvolved</a></li>
-            <li><a href="../volunteerpages/signup.html"><i class="fa-solid fa-dragon"></i>BeInspired</a></li>
-            <li><a href="../volunteerpages/signup.html"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
+            <li><a id="beinspiredlink"><i class="fa-solid fa-dragon"></i>BeInspired</a></li>
+            <li><a id="myprofile"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
             <div class="active"></div>
         
 
@@ -155,7 +155,7 @@ let arr = localStorage.getItem("userprofile_name");
     }
     else{
        console.log("isac");
-        gethelp.setAttribute("href","gethelp.html");
+        gethelp.setAttribute("href","../patientpages/gethelp.html");
         donation.setAttribute("href","../donarpages/donationrequest.html");
         beinspired.setAttribute("href","../beinspired/inspire.html");
         profile.setAttribute("href","../volunteerpages/profile.html");
