--- a/pages/beinspired/inspire.html
+++ b/pages/beinspired/inspire.html
@@ -22,12 +22,12 @@
            
             
             <li><a href="../about/schemes.html"><i class="fa-solid fa-gift"></i>Schemes</a></li>
-            <li><a href="../donarpages/donationrequest.html"><i class="fa-solid fa-circle-dollar-to-slot"></i>Donatenow</a></li>
+            <li><a id="donationlink"><i class="fa-solid fa-circle-dollar-to-slot"></i>Donatenow</a></li>
             <li><a href="../about/aboutus.html"><i class="fa-solid fa-users"></i><p>About</p></a></li>
-            <li><a href="../patientpages/gethelp.html"><i class="fa-solid fa-truck-medical"></i>Gethelp</a></li>
+            <li><a id="gethelp"><i class="fa-solid fa-truck-medical"></i>Gethelp</a></li>
             <li><a href="../donarpages/involve.html"><i class="fa-brands fa-superpowers"></i>GetInvolved</a></li>
-            <li><a href="../beinspired/inspire.html"><i class="fa-solid fa-dragon"></i>BeInspired</a></li>
-            <li><a href="../about/profile.html"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
+            <li><a id="beinspiredlink"><i class="fa-solid fa-dragon"></i>BeInspired</a></li>
+            <li><a id="myprofile"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
             <div class="active"></div>
           </ul>
       </div>
