--- a/pages/volunteerpages/volunteerwork.html
+++ b/pages/volunteerpages/volunteerwork.html
@@ -27,7 +27,7 @@
             <li><a href="../patientpages/gethelp.html"><i class="fa-solid fa-truck-medical"></i>Gethelp</a></li>
             <li><a href="../donarpages/involve.html"><i class="fa-brands fa-superpowers"></i>GetInvolved</a></li>
             <li><a href="../beinspired/inspire.html"><i class="fa-solid fa-dragon"></i>BeInspired</a></li>
-            <li><a href="../volunteerpages/signup.html"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
+            <li><a href="../about/profile.html"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
             <div class="active"></div>
           </ul>
       </div>
@@ -36,7 +36,7 @@
     <!-- nav ends  -->
     <main>
       <div class="full tablework">
-          <h1> HI <span id="name"> isac</span> 18/12/22 WORKS AND AREAS</h1>  
+          <h1>18/12/22 WORKS AND AREAS</h1>  
         <section class="sec2">
             <table> <caption>work</caption>
                 <tr>
@@ -143,7 +143,7 @@
         </div>
       </footer>
       <script>
-        
+       
  // comented screenreader beacuse toggle button not coded 
 
 
