--- a/pages/donarpages/donationrequest.html
+++ b/pages/donarpages/donationrequest.html
@@ -118,7 +118,7 @@
     // });
 
     let div_requests
-    let request_id
+    // let request_id
     let img
     let address
     let request_title
@@ -176,10 +176,10 @@
       // anker.append(btn)
 
 
-      request_id = document.createElement("p");
-      request_id.setAttribute("class", "addressp");
-      request_id.innerHTML = "<span>request_id</span>:- "+new_request[i].request_id;
-      contact_holder.append(request_id);
+      // request_id = document.createElement("p");
+      // request_id.setAttribute("class", "addressp");
+      // request_id.innerHTML = "<span>request_id</span>:- "+new_request[i].request_id;
+      // contact_holder.append(request_id);
 
 
       request_title = document.createElement("p");
