--- a/pages/patientpages/bookhospital.html
+++ b/pages/patientpages/bookhospital.html
@@ -248,7 +248,7 @@
     let div_hospitals
     let img
     let address
-    let hospital_id
+    // let hospital_id
     let request_title
     let about_request
     let requested_by
@@ -284,11 +284,11 @@
 
       div_hospitals.append(contact_holder);
 
-      hospital_id = document.createElement("p");
-      hospital_id.setAttribute("class", "addressp");
-      // request_title.setAttribute("width","300px");
-      hospital_id.innerHTML ="<span>hospital_id</span>:- "+ hospitals[i].hospital_id;
-      contact_holder.append(hospital_id);
+      // hospital_id = document.createElement("p");
+      // hospital_id.setAttribute("class", "addressp");
+      // // request_title.setAttribute("width","300px");
+      // hospital_id.innerHTML ="<span>hospital_id</span>:- "+ hospitals[i].hospital_id;
+      // contact_holder.append(hospital_id);
 
 
       request_title = document.createElement("p");
