--- a/pages/patientpages/appointment.html
+++ b/pages/patientpages/appointment.html
@@ -33,11 +33,13 @@
 </nav>
 <!-- content starts  -->
 <main>
+  <div class="full book">
 <div class="container">
   <div class="appimg">
     <h4>booking id:#336</h4>
-   <img src="../../assets/images/doctor.jpg" width="500px" alt="image error">
+   <img id="img" width="500px" alt="image error">
   </div>
+ 
   <div class="abtdoc">
     <div class="texts">
       <h2>NAME</h2>
@@ -45,19 +47,17 @@
       <h2>CONTACT NUMBER</h2>
       <h2>APPOINTMENT TIME</h2>
       <h2>APPOINTMENT DATE</h2>
-      <h2>APPOINTMENT FEES</h2>
       <h2>ADDRESS</h2>
     </div>
     <div class="infos">
-      <h4 id="name">john</h4>
-      <h4>vellamal hospital</h4>
-      <h4>7305876534</h4>
-      <h4>9-12am</h4>
-      <h4>9-12-2022</h4>
-      <h4>NONE</h4>
-      <h4>ganhinagar,main road<br>palavakam,omr near<br>chennai-15<br>tamilnadu</h4>
+      <h4 id="docnmae"></h4>
+      <h4 id="hosname"></h4>
+      <h4 id="number"></h4>
+      <h4 id="date"></h4>
+      <h4 id="address"></h4>
     </div>
   </div>
+</div>
 </div>
 </main>
 <!-- footer starts  -->
@@ -98,7 +98,20 @@
   </div>
 </footer>
 <script>
+let arr=JSON.parse(localStorage.getItem("booking_info")) 
+console.log(arr);
+// for(let i=0;i<arr.length;i++){
 
+// }
+let number=document.getElementById("number")
+let date=document.getElementById("date")
+let docname=document.getElementById("docname")
+let hosnmae=document.getElementById("hosname")
+let address=document.getElementById("address")
+
+
+number.innerText=arr[0]["user_mobile"]
+date.innerText=arr[0]["date"]
 
 
 </script>
