--- a/pages/patientpages/projectview.html
+++ b/pages/patientpages/projectview.html
@@ -22,7 +22,7 @@
     <ul class="navlinks">
               
           <li><a href="../about/schemes.html"><i class="fa-solid fa-gift"></i>Schemes</a></li>
-          <li><a href="../donarpages/donarlogin.html"><i class="fa-solid fa-circle-dollar-to-slot"></i>Donatenow</a></li>
+          <li><a href="../donarpages/donationrequest.html"><i class="fa-solid fa-circle-dollar-to-slot"></i>Donatenow</a></li>
           <li><a href="../about/aboutus.html"><i class="fa-solid fa-users"></i><p>About</p></a></li>
           <li><a href="../patientpages/gethelp.html"><i class="fa-solid fa-truck-medical"></i>Gethelp</a></li>
           <li><a href="../donarpages/involve.html"><i class="fa-brands fa-superpowers"></i>GetInvolved</a></li>
