--- a/pages/patientpages/appointment.html
+++ b/pages/patientpages/appointment.html
@@ -35,27 +35,11 @@
 <main>
   <div class="full book">
 <div class="container">
-  <div class="appimg">
-    <h4>booking id:#336</h4>
-   <img id="img" width="500px" alt="image error">
-  </div>
- 
-  <div class="abtdoc">
-    <div class="texts">
-      <h2>NAME</h2>
-      <h2>HOSPITAL NAME</h2>
-      <h2>CONTACT NUMBER</h2>
-      <h2>APPOINTMENT TIME</h2>
-      <h2>APPOINTMENT DATE</h2>
-      <h2>ADDRESS</h2>
-    </div>
-    <div class="infos">
-      <h4 id="docnmae"></h4>
-      <h4 id="hosname"></h4>
-      <h4 id="number"></h4>
-      <h4 id="date"></h4>
-      <h4 id="address"></h4>
-    </div>
+  <div class="holder">
+    <img src="../.../../../assets/images/apollo-hospital-image.jpg" alt="appolo" width="500px">
+    <p>hospital name</p>
+    <p>appointment date</p>
+
   </div>
 </div>
 </div>
