--- a/pages/about/aboutus.html
+++ b/pages/about/aboutus.html
@@ -35,6 +35,11 @@
    
     <main>
         <!-- content starts  -->
+        <!-- <div class="checkbox">
+            <label for="click" class="text">screen reader</label>
+            <input type="checkbox" id="click" >
+      
+          </div> -->
         <section class="aboutsec1">
             <div  class="sec1h1">
                 <h1>ABOUT US</h1>
