--- a/pages/about/apply.html
+++ b/pages/about/apply.html
@@ -16,6 +16,11 @@
 
 <body>
   <!-- nav bar starts  -->
+  <!-- <div class="checkbox">
+    <label for="click" class="text">screen reader</label>
+    <input type="checkbox" id="click" >
+
+  </div> -->
     <nav>
       <div class="side-nav">
         <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
