--- a/pages/about/schemes.html
+++ b/pages/about/schemes.html
@@ -19,6 +19,11 @@
 </head>
 <body>
   <!-- nav bar starts  -->
+  <!-- <div class="checkbox">
+      <label for="click" class="text">screen reader</label>
+      <input type="checkbox" id="click" >
+
+    </div> -->
     <nav>
     <!-- <div class="menu-bar"> -->
       <div class="side-nav">
