--- a/pages/donarpages/donationrequest.html
+++ b/pages/donarpages/donationrequest.html
@@ -18,6 +18,11 @@
 </head>
 
 <body>
+  <!-- <div class="checkbox">
+    <label for="click" class="text">screen reader</label>
+    <input type="checkbox" id="click" >
+
+  </div> -->
   <!-- nav bar starts  -->
   <nav>
     <div class="side-nav">
@@ -194,7 +199,7 @@
       //    button class join 
       button = document.createElement("button");
       button.setAttribute("class", "join");
-      button.innerText = "booknow"
+      button.innerText = "Donate now"
       a1.append(button);
       document.querySelector(".sec2").append(div_requests);
     }
