--- a/pages/donarpages/involve.html
+++ b/pages/donarpages/involve.html
@@ -17,6 +17,11 @@
 </head>
 
 <body>
+  <!-- <div class="checkbox">
+    <label for="click" class="text">screen reader</label>
+    <input type="checkbox" id="click" >
+
+  </div> -->
   <!-- nav bar starts  -->
   <nav>
     <!-- <div class="menu-bar"> -->
@@ -146,7 +151,7 @@
     }
     else{
        console.log("isac");
-        gethelp.setAttribute("href","gethelp.html");
+        gethelp.setAttribute("href","../patientpages/gethelp.html");
         donation.setAttribute("href","../donarpages/donationrequest.html");
         beinspired.setAttribute("href","../beinspired/inspire.html");
         profile.setAttribute("href","../volunteerpages/profile.html");
