--- a/pages/patientpages/gethelp.html
+++ b/pages/patientpages/gethelp.html
@@ -15,6 +15,11 @@
 </head>
 
 <body>
+  <!-- <div class="checkbox">
+    <label for="click" class="text">screen reader</label>
+    <input type="checkbox" id="click" >
+
+  </div> -->
   <!-- nav bar starts  -->
   <nav>
     <div class="side-nav">
