--- a/pages/beinspired/inspire.html
+++ b/pages/beinspired/inspire.html
@@ -15,6 +15,11 @@
 </head>
 
 <body>
+  <!-- <div class="checkbox">
+    <label for="click" class="text">screen reader</label>
+    <input type="checkbox" id="click" >
+
+  </div> -->
     <nav>
       <div class="side-nav">
         <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
