--- a/pages/patientpages/contact.html
+++ b/pages/patientpages/contact.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+    <!-- <div class="checkbox">
+        <label for="click" class="text">screen reader</label>
+        <input type="checkbox" id="click" >
+  
+      </div> -->
     <div class="side-nav">
         <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
         <ul class="navlinks">
