--- a/pages/beinspired/inspire.html
+++ b/pages/beinspired/inspire.html
@@ -197,7 +197,7 @@ let arr = localStorage.getItem("userprofile_name");
     }
     else{
        console.log("isac");
-        gethelp.setAttribute("href","gethelp.html");
+        gethelp.setAttribute("href","../patientpages/gethelp.html");
         donation.setAttribute("href","../donarpages/donationrequest.html");
         beinspired.setAttribute("href","../beinspired/inspire.html");
         profile.setAttribute("href","../volunteerpages/profile.html");
