--- a/pages/about/aboutus.html
+++ b/pages/about/aboutus.html
@@ -162,7 +162,7 @@ let arr = localStorage.getItem("userprofile_name");
     }
     else{
       
-        gethelp.setAttribute("href","gethelp.html");
+        gethelp.setAttribute("href","../patientpages/gethelp.html");
         donation.setAttribute("href","../donarpages/donationrequest.html");
         beinspired.setAttribute("href","../beinspired/inspire.html");
         profile.setAttribute("href","../volunteerpages/profile.html");
