--- a/pages/patientpages/govt.html
+++ b/pages/patientpages/govt.html
@@ -306,7 +306,7 @@
     }
     else{
        console.log("isac");
-        gethelp.setAttribute("href","gethelp.html");
+        gethelp.setAttribute("href","../patientpages/gethelp.html");
         donation.setAttribute("href","../donarpages/donationrequest.html");
         beinspired.setAttribute("href","../beinspired/inspire.html");
         profile.setAttribute("href","../volunteerpages/profile.html");
