--- a/pages/patientpages/govt.html
+++ b/pages/patientpages/govt.html
@@ -309,7 +309,7 @@
         gethelp.setAttribute("href","../patientpages/gethelp.html");
         donation.setAttribute("href","../donarpages/donationrequest.html");
         beinspired.setAttribute("href","../beinspired/inspire.html");
-        profile.setAttribute("href","../volunteerpages/profile.html");
+        profile.setAttribute("href","../about/profile.html");
     } 
 
    
