--- a/pages/about/aboutus.html
+++ b/pages/about/aboutus.html
@@ -165,7 +165,7 @@ let arr = localStorage.getItem("userprofile_name");
         gethelp.setAttribute("href","../patientpages/gethelp.html");
         donation.setAttribute("href","../donarpages/donationrequest.html");
         beinspired.setAttribute("href","../beinspired/inspire.html");
-        profile.setAttribute("href","../volunteerpages/profile.html");
+        profile.setAttribute("href","../about/profile.html");
     } 
 
 
