--- a/pages/about/apply.html
+++ b/pages/about/apply.html
@@ -152,7 +152,7 @@ let arr = localStorage.getItem("userprofile_name");
         gethelp.setAttribute("href","../patientpages/gethelp.html");
         donation.setAttribute("href","../donarpages/donationrequest.html");
         beinspired.setAttribute("href","../beinspired/inspire.html");
-        profile.setAttribute("href","../volunteerpages/profile.html");
+        profile.setAttribute("href","../about/profile.html");
     } 
       </script>
       </html>
