--- a/pages/donarpages/involve.html
+++ b/pages/donarpages/involve.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
   
   <script src="https://kit.fontawesome.com/98f622c388.js" crossorigin="anonymous"></script>
-  <script src="../../assets/sweetalert.min.js"></script>
+  <script src="../../assets/js/sweetalert.min.js"></script>
   <title>gethelp</title>
 </head>
 
