--- a/pages/patientpages/bookhospital.html
+++ b/pages/patientpages/bookhospital.html
@@ -55,7 +55,10 @@
       <h2>Here you can book the hospitals which is nearby you.<br>Here the list of hospitals which is collabed with
         trust<br>You can get medical help free and low cost</h2>
       <hr>
-
+      <div class="search-container">
+        <input type="text" id="search-bar" placeholder="Search product by name...">
+        <button type="button" >Search</button>
+      </div>
     </section>
   </div>
   <!-- footer starts  -->
