--- a/pages/donarpages/donationrequest.html
+++ b/pages/donarpages/donationrequest.html
@@ -52,6 +52,10 @@
   <div class="full">
     <section class="sec2">
       <h2>Here is our verified needs of help<br>Help us by donating to help them</h2>
+      <div class="search-container">
+        <input type="text" id="search-bar" placeholder="Search product by name...">
+        <button type="button" >Search</button>
+      </div>
     </section>
   </div>
   <!-- footer starts  -->
