--- a/pages/patientpages/buyproducts.html
+++ b/pages/patientpages/buyproducts.html
@@ -59,6 +59,10 @@
         <h2>Here you can buy the products .<br>Here the list of products which is we collabed with shops<br>
           You can get products free and low cost</h2>
       </section>
+      <div class="search-container">
+        <input type="text" id="search-bar" placeholder="Search product by name...">
+        <button type="button" >Search</button>
+      </div>
       <section class="sec3">
 
 
